grp_id 로 num id 생성. group_id 는 string id 로 사용. string id 자동증가 생성.

--- a/integration-platform-groupmgmt/build.gradle
+++ b/integration-platform-groupmgmt/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 	// Kafka
 	implementation 'org.springframework.kafka:spring-kafka'
 
-	// Swagger (Springdoc OpenAPI)
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	// Swagger (Springdoc OpenAPI) 2.2.0 -> 2.7.0 스프링 boot 버전과 swagger 호환
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
